# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.57)
AC_INIT([libcontain],[0.0-alpha2],[ronald@landheer.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([Hash.cc])
AC_CONFIG_HEADER([config.h])

# check the host system
AC_CANONICAL_HOST
source `dirname $0`/arch/config.arch
AC_SUBST(ARCH, ${host_cpu})

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdint.h stdlib.h string.h strings.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
dnl AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_CHECK_FUNCS([memset strchr strdup])
AC_REPLACE_FUNCS([strlwr])
AC_CONFIG_FILES([Makefile config-libcontain libreplace/Makefile])
AC_OUTPUT
