TESTS=	hash_test1 \
	hash_test2 \
	hash_test3 \
	hash_test4 \
	hash_test5 \
	hash_test6 \
	stack_test \
	list_test \
	queue_test
noinst_PROGRAMS=$(TESTS)
hash_test1_SOURCES=hash_test1.cc
hash_test2_SOURCES=hash_test2.cc
hash_test3_SOURCES=hash_test3.cc
hash_test4_SOURCES=hash_test4.cc
hash_test5_SOURCES=hash_test5.cc
hash_test1_LDADD=../libcontain.la
hash_test2_LDADD=../libcontain.la
hash_test3_LDADD=../libcontain.la
hash_test4_LDADD=../libcontain.la
hash_test5_LDADD=../libcontain.la
hash_test6_LDADD=../libcontain.la -lstdc++
stack_test_LDADD=../libcontain.la -lstdc++
list_test_LDADD=../libcontain.la -lstdc++
queue_test_LDADD=../libcontain.la -lstdc++
AM_CFLAGS=-g

